# cbz-downscaler

./: .gitignore  CMakeLists.txt  main.cpp
include/: argument_parser.hpp  cbz_tools.hpp  cbz_unzipper.hpp  image_converter.hpp  image_scaler.hpp  path_tools.hpp
src/: argument_parser.cpp  cbz_tools.cpp  cbz_unzipper.cpp  image_converter.cpp  image_scaler.cpp  main.cpp  path_tools.cpp
